--- a/strategy/Cargo.toml
+++ b/strategy/Cargo.toml
@@ -9,6 +9,7 @@ debug = []
 
 [dependencies]
 chrono = "0.4.1"
+fern = "0.5.5"
 flexi_logger = "0.8.1"
 lazy_static = "1.0.0"
 log = "0.4.1"
@@ -17,4 +18,5 @@ rand = "0.4.2"
 serde = "1.0.13"
 serde_derive = "1.0.13"
 serde_json = "1.0.13"
+simplelog = "0.5.1"
 time = "0.1.39"
