--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ debug = ["chrono", "fern", "log", "time"]
 
 [dependencies]
 lazy_static = "1.0.0"
+rand = "0.4.2"
 serde = "1.0.13"
 serde_derive = "1.0.13"
 serde_json = "1.0.13"
